--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -33,8 +33,8 @@
 
            <div class="form-text text-danger" *ngIf="formCadastro.controls['name'].errors?.['required']"> O nome é obrigatório</div>
            <div class="form-text text-danger" *ngIf="formCadastro.controls['name'].errors?.['minlength']"> O nome deve ter ao menos três caracteres</div>
-           <div class="form-text text-danger" *ngIf="formCadastro.controls['name'].errors?.['pattern']"> O nome deve conter somente letras</div>
-
+           <!--<div class="form-text text-danger" *ngIf="formCadastro.controls['name'].errors?.['pattern']"> O nome deve conter somente letras</div>
+           -->
         </div>
         
        <div class="mb-3">
