--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -75,7 +75,7 @@
                                       </p>
                                       <div class="row">
                                           <div class="col-6 text-end">
-                                              <button class="btn btn-sm btn-success" > Adicionar ao Carrinho</button>
+                                              <button class="btn btn-sm btn-success" (click)="save(product.id)" > Adicionar ao Carrinho</button>
                                           </div>
                                       </div>
                                     
