--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -59,7 +59,7 @@
   </div>
 
   <div class="local">
-    <div class="line">
+    <div [hidden]="!isClient() && !notLogged()" class="local" class="line">
     <div class="name"> PRODUTOS EM DESTAQUE </div>
     </div>
   </div>
@@ -95,4 +95,54 @@
       </div>
   </section>
 
-  
+ 
+  <footer>
+    <div class="container-footer">
+        <div class="row-footer">
+            <!-- footer col-->
+            <div class="footer-col">
+                <h4>Empresa</h4>
+                <ul>
+                    <li><a href="#"> Quem somos </a></li>
+                    <li><a href=""> nossos serviços </a></li>
+                    <li><a href=""> política de privacidade </a></li>
+                    <li><a href=""> programa de afiliados</a></li>
+                </ul>
+            </div>
+            <!--end footer col-->
+            <!-- footer col-->
+            <div class="footer-col">
+                <h4>Obter ajuda</h4>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Transporte</a></li>
+                    <li><a href="#">devoluções</a></li>
+                    <li><a href="#">Status De Pedido</a></li>
+                    <li><a href="#">Opções De Pagamento</a></li>
+                </ul>
+            </div>
+            <!--end footer col-->
+            <!-- footer col-->
+            <div class="footer-col">
+                <h4>Loja online</h4>
+                <ul>
+                    <li><a href="#">Relógio</a></li>
+                    <li><a href="#">Saco</a></li>
+                    <li><a href="#">Calçado</a></li>
+                    <li><a href="#">Endereço</a></li>
+                </ul>
+            </div>
+            <!--end footer col-->
+            <!-- footer col-->
+            <div class="footer-col">
+                <div class="medias-socias">
+                    <a href="#"> <i class="fa fa-facebook"></i> </a>
+                    <a href="#"> <i class="fa fa-instagram"></i> </a>
+                    <a href="#"> <i class="fa fa-twitter"></i> </a>
+                    <a href="#"> <i class="fa fa-linkedin"></i> </a>
+                </div>
+            </div>
+            <!--end footer col-->
+        </div>
+    </div>
+</footer>
