--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -44,6 +44,7 @@
 
 .card {
   background-color: rgb(241, 241, 241);
+  margin-top: 30px;
 }
 
 .local {
@@ -70,12 +71,8 @@
   justify-content: center;
 }
 
-.background {
-  background-color: rgb(241, 241, 241);
-  width: 100%;
-  padding-top: 20px;
-  padding-bottom: 70px;
+
+a {
+  text-decoration: none;
 }
-
-
 
