--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -37,9 +37,9 @@
 
       <ul class="navbar-nav ml-auto">
         <li class="nav-item1">
-          <a [hidden]="!isClient()" class="nav-link" href="perfil" class="link1">
+          <a [hidden]="!isClient()" class="nav-link" class="link1">
             <img id="perfil" src="assets/do-utilizador.png" alt="">
-            <span class="btn btn-info" routerLink="/meuPerfil"> {{name}} </span>
+            <span class="btn btn-info"> {{name}} </span>
           </a>
         </li> 
       </ul>
