--- a/src/app/private/gerente/visualizar-vendedor/visualizar-vendedor.component.html
+++ b/src/app/private/gerente/visualizar-vendedor/visualizar-vendedor.component.html
@@ -16,8 +16,8 @@
             <thead>
                 <tr>
                     <th>Nome do Vendedor</th>
-                    <th>Id</th>
-                    <th>CNPJ</th>
+                    <th>ID</th>
+                    <th>CPF</th>
                 </tr>
                 
             </thead>
