--- a/src/app/components/carrinho-compras/carrinho-compras.component.html
+++ b/src/app/components/carrinho-compras/carrinho-compras.component.html
@@ -16,7 +16,6 @@
                   <div class="d-flex justify-content-between align-items-center mb-4">
                     <div>
                       <p class="mb-1">Shopping cart</p>
-                      <p class="mb-0">You have 4 items in your cart</p>
                     </div>
                     <div>
                       <p class="mb-0"><span class="text-muted">Sort by:</span> <a href="#!"
@@ -24,26 +23,26 @@
                     </div>
                   </div>
   
-                  <div class="card mb-3">
-                    <div class="card-body">
+                  <div class="card mb-3" id = "card">
+                    <div class="card-body" *ngFor="let cart of cartList">
                       <div class="d-flex justify-content-between">
                         <div class="d-flex flex-row align-items-center">
                           <div>
                             <img
-                              src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-shopping-carts/img1.webp"
+                              src="{{cart.imageLink}}"
                               class="img-fluid rounded-3" alt="Shopping item" style="width: 65px;">
                           </div>
                           <div class="ms-3">
-                            <h5>Iphone 11 pro</h5>
-                            <p class="small mb-0">256GB, Navy Blue</p>
+                            <h5>{{cart}}</h5>
+                            <p class="small mb-0">{{cart.description}}</p>
                           </div>
                         </div>
                         <div class="d-flex flex-row align-items-center">
                           <div style="width: 50px;">
-                            <h5 class="fw-normal mb-0">2</h5>
+                            <h5 class="fw-normal mb-0">{{cart.quantity}}</h5>
                           </div>
                           <div style="width: 80px;">
-                            <h5 class="mb-0">$900</h5>
+                            <h5 class="mb-0">R${{cart.value}}</h5>
                           </div>
                           <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                         </div>
