Carrinho de compras editado

--- a/src/app/components/carrinho-compras/carrinho-compras.component.html
+++ b/src/app/components/carrinho-compras/carrinho-compras.component.html
@@ -9,22 +9,17 @@
               <div class="row">
   
                 <div class="col-lg-7">
-                  <h5 class="mb-3"><a href="#!" class="text-body"><i
-                        class="fas fa-long-arrow-alt-left me-2"></i>Continue shopping</a></h5>
-                  <hr>
   
                   <div class="d-flex justify-content-between align-items-center mb-4">
                     <div>
-                      <p class="mb-1">Shopping cart</p>
+                      <p class="mb-1">Carrinho de compras</p><hr><br>
                     </div>
                     <div>
-                      <p class="mb-0"><span class="text-muted">Sort by:</span> <a href="#!"
-                          class="text-body">price <i class="fas fa-angle-down mt-1"></i></a></p>
                     </div>
                   </div>
   
                   <div class="card mb-3" id = "card">
-                    <div class="card-body" *ngFor="let produto of Products">
+                    <div class="card-body" *ngFor="let produto of Products; let i = index" [ngClass]="i % 2 === 0 ? 'cor-par' : 'cor-impar'">
                       <div class="d-flex justify-content-between">
                         <div class="d-flex flex-row align-items-center">
                           <div>
@@ -42,7 +37,7 @@
                             <h5 class="fw-normal mb-0">{{cart.Products!.get(produto.id)}}</h5>
                           </div>
                           <div style="width: 80px;">
-                            <h5 class="mb-0">R${{produto.value * cart.Products!.get(produto.id)!}}</h5>
+                            <h6 class="mb-0">R$ {{produto.value * cart.Products!.get(produto.id)!}}</h6>
                           </div>
                           <a href="#!" style="color: #cecece;"><i class="fas fa-trash-alt"></i></a>
                         </div>
@@ -52,52 +47,36 @@
   
                 </div>
                 <div class="col-lg-5">
-  
+
+                  
+                  <div class="card-body">
+
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                      <div>
+                        <p class="mb-1">Conclua sua compra</p><hr>
+                      </div>
+                      <div>
+                      </div>
+                    </div>
+
                   <div class="card bg-primary text-white rounded-3">
                     <div class="card-body">
                       <div class="d-flex justify-content-between align-items-center mb-4">
-                        <h5 class="mb-0">Card details</h5>
+                        <h5 class="mb-0">Detalhes da compra</h5>
                         <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp"
                           class="img-fluid rounded-3" style="width: 45px;" alt="Avatar">
                       </div>
   
-                      <p class="small mb-2">Card type</p>
-                      <a href="#!" type="submit" class="text-white"><i
-                          class="fab fa-cc-mastercard fa-2x me-2"></i></a>
-                      <a href="#!" type="submit" class="text-white"><i
-                          class="fab fa-cc-visa fa-2x me-2"></i></a>
-                      <a href="#!" type="submit" class="text-white"><i
-                          class="fab fa-cc-amex fa-2x me-2"></i></a>
-                      <a href="#!" type="submit" class="text-white"><i class="fab fa-cc-paypal fa-2x"></i></a>
   
                       <form class="mt-4">
                         <div class="form-outline form-white mb-4">
-                          <input type="text" id="typeName" class="form-control form-control-lg" siez="17"
-                            placeholder="Cardholder's Name" />
-                          <label class="form-label" for="typeName">Cardholder's Name</label>
-                        </div>
-  
-                        <div class="form-outline form-white mb-4">
-                          <input type="text" id="typeText" class="form-control form-control-lg" siez="17"
-                            placeholder="1234 5678 9012 3457" minlength="19" maxlength="19" />
-                          <label class="form-label" for="typeText">Card Number</label>
-                        </div>
-  
-                        <div class="row mb-4">
-                          <div class="col-md-6">
-                            <div class="form-outline form-white">
-                              <input type="text" id="typeExp" class="form-control form-control-lg"
-                                placeholder="MM/YYYY" size="7" id="exp" minlength="7" maxlength="7" />
-                              <label class="form-label" for="typeExp">Expiration</label>
-                            </div>
-                          </div>
-                          <div class="col-md-6">
-                            <div class="form-outline form-white">
-                              <input type="password" id="typeText" class="form-control form-control-lg"
-                                placeholder="&#9679;&#9679;&#9679;" size="1" minlength="3" maxlength="3" />
-                              <label class="form-label" for="typeText">Cvv</label>
-                            </div>
-                          </div>
+
+                          <label class="form-label" for="paymentMethod">Método de pagamento: </label>
+                            <select class="form-select form-control" id="paymentMethod" name="paymentMethod">
+                              <option value="pix">Pix</option>
+                              <option value="cartão de crédito">Cartão de crédito</option>
+                            </select>
+
                         </div>
   
                       </form>
@@ -122,7 +101,7 @@
   
                     </div>
                   </div>
-  
+                </div>
                 </div>
   
               </div>
