--- a/src/app/components/carrinho-compras/carrinho-compras.component.scss
+++ b/src/app/components/carrinho-compras/carrinho-compras.component.scss
@@ -3,3 +3,11 @@
     height: 100vh !important;
     }
     }
+
+.cor-par {
+    background-color: #ECECEC;
+}
+    
+.cor-impar {
+    background-color: #F7F7F7;
+}
