listar vendedores p/data implementado.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,8 +23,8 @@
         </button>
       </div>
   </div>
-  <div class="local">
-    <div [hidden]="!isClient() && !notLogged()" class="local" class="line">
+  <div [hidden]="!isClient() && !notLogged()" class="local">
+    <div class="line">
     <div class="name"> PRODUTOS EM DESTAQUE </div>
     </div>
   </div>
@@ -127,48 +127,26 @@
         <div class="row-footer">
             <!-- footer col-->
             <div class="footer-col">
-                <h4>Empresa</h4>
+                <h4>Equipe</h4>
                 <ul>
-                    <li><a href="#"> Quem somos </a></li>
-                    <li><a href=""> nossos serviços </a></li>
-                    <li><a href=""> política de privacidade </a></li>
-                    <li><a href=""> programa de afiliados</a></li>
+                    <li><a href="https://github.com/Francisco-Jean"> Francisco Jean </a></li>
+                    <li><a href="https://github.com/gcirineu18"> Guilherme Barbosa </a></li>
+                    <li><a href="https://github.com/levy-oliveira"> Levy Oliveira </a></li>
+                    <li><a href="https://github.com/biavieiras"> Beatriz Vieira </a></li>
+                    <li><a href="https://github.com/gustavoib"> João Gustavo </a></li>
                 </ul>
             </div>
             <!--end footer col-->
             <!-- footer col-->
             <div class="footer-col">
-                <h4>Obter ajuda</h4>
+                <h4>Tecnologias usadas no trabalho</h4>
                 <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Transporte</a></li>
-                    <li><a href="#">devoluções</a></li>
-                    <li><a href="#">Status De Pedido</a></li>
-                    <li><a href="#">Opções De Pagamento</a></li>
+                    <li><a>Java</a></li>
+                    <li><a>Spring Boot 3</a></li>
+                    <li><a>PostgreeSQL</a></li>
+                    <li><a>AngularJS</a></li>
                 </ul>
             </div>
-            <!--end footer col-->
-            <!-- footer col-->
-            <div class="footer-col">
-                <h4>Loja online</h4>
-                <ul>
-                    <li><a href="#">Relógio</a></li>
-                    <li><a href="#">Saco</a></li>
-                    <li><a href="#">Calçado</a></li>
-                    <li><a href="#">Endereço</a></li>
-                </ul>
-            </div>
-            <!--end footer col-->
-            <!-- footer col-->
-            <div class="footer-col">
-                <div class="medias-socias">
-                    <a href="#"> <i class="fa fa-facebook"></i> </a>
-                    <a href="#"> <i class="fa fa-instagram"></i> </a>
-                    <a href="#"> <i class="fa fa-twitter"></i> </a>
-                    <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                </div>
-            </div>
-            <!--end footer col-->
         </div>
     </div>
 </footer>
