--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -78,6 +78,11 @@ footer{
   bottom: 0;
   width: 100%;
 }
+
+.footer-left {
+  float: left;
+}
+
 .container-footer{
   max-width: 1400px;
   padding: 0 4%;
