--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -141,25 +141,20 @@
   float: left;
 
 }
-.link4{
-  
+.link4{ 
   float: left;
   margin-left: 40px;
- 
   text-decoration: none;
 }
 
-
-
 .link5{
-  
   float:left;
   margin-left: -30px;
  
   
 }
 .btn-info:hover{
-  background-color: #58b1ff;
+  background-color: #278ff1;
 }
 
 #editar{
