listar-por-vendedor
listagem por vendedor

--- a/src/app/components/carrinho-compras/carrinho-compras.component.html
+++ b/src/app/components/carrinho-compras/carrinho-compras.component.html
@@ -63,7 +63,7 @@
                     <div class="card-body">
                       <div class="d-flex justify-content-between align-items-center mb-4">
                         <h5 class="mb-0">Detalhes da compra</h5>
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/avatar-6.webp"
+                        <img src="assets/do-utilizador.png"
                           class="img-fluid rounded-3" style="width: 45px;" alt="Avatar">
                       </div>
   
