--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -46,9 +46,9 @@
 
       <ul class="navbar-nav ml-auto">
         <li class="nav-item1">
-          <a [hidden]="!isSeller()" class="nav-link "href="carrinho" class="link1">
+          <a [hidden]="!isSeller()" class="nav-link "href="visualizarVendasVendedor" class="link1">
             <img id="trem" src="assets/trem.png" alt="">
-            <span class="btn btn-info" routerLink="/carrinho"> Listar vendas </span>
+            <span class="btn btn-info" routerLink="visualizarVendasVendedor"> Listar vendas </span>
           </a>
         </li> 
       </ul>
