--- a/src/app/private/seller/seller.component.html
+++ b/src/app/private/seller/seller.component.html
@@ -1,10 +1,4 @@
-<nav class="navbar">
-    <div class="container">
-      <div class="nav navbar-nav mx-auto" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="home"><img src="assets/icon.png" alt=""></a>
-      </div>
-    </div>
-  </nav>
+<app-layout></app-layout>
 
   <div class="container">
     <div id="tabela" class="mt-3 mb-3 p-3 card shadow"> 
