--- a/src/app/private/alterar-product/alterar-product.component.html
+++ b/src/app/private/alterar-product/alterar-product.component.html
@@ -1,11 +1,5 @@
 
-<nav class="navbar">
-  <div class="container">
-    <div class="nav navbar-nav mx-auto" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="home"><img src="assets/icon.png" alt=""></a>
-    </div>
-  </div>
-</nav>
+<app-layout></app-layout>
   
 <div class=" gradient-background">
     <div class="container">
