--- a/src/app/private/edit-product/edit-product.component.html
+++ b/src/app/private/edit-product/edit-product.component.html
@@ -1,8 +1,4 @@
-<nav class="navbar">
-    <div class="nav navbar-nav mx-auto" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="home"><img src="assets/icon.png" alt=""></a>
-    </div>
-</nav>
+<app-layout></app-layout>
     
 <div class="gradient-background">
     <div class="container">
