--- a/src/app/private/vendas/lista-vendas-vendedor/lista-vendas-vendedor.component.html
+++ b/src/app/private/vendas/lista-vendas-vendedor/lista-vendas-vendedor.component.html
@@ -4,28 +4,29 @@
     <div class="container">
         <div id="tabela" class="mt-3 mb-3 p-3 card shadow">
             <div class="d-flex justify-content-between">
-                <h2>Vendedores cadastrados no sistema</h2>  
+                <h2>Lista de vendas realizadas</h2>  
                 <button class="btn btn-sm btn-secondary" routerLink="/home">Voltar</button>   
             </div> 
      <div class="table-reponsive">
         <table class="table">
             <thead>
                 <tr>
-                    <th>Nome do Vendedor</th>
-                    <th>ID</th>
-                    <th>CPF</th>
+                    <th>Produtos</th>
+                    <th>Vendedor</th>
+                    <th>Valor</th>
+                    <th>Data</th>
                 </tr>
                 
             </thead>
-            <tbody *ngFor="let seller of listSellers">
+            <tbody *ngFor="let sale of listSale">
                 <tr>
-                    <td>{{seller.name}}</td>
-                    <td>{{seller.id}}</td>
-                    <td>{{seller.identifier}}</td>
+                    <td>{{sale.id}}</td>
+                    <td>{{sale.idSeller}}</td>
+                    <td>{{sale.id}}</td>
+                    <td>{{sale.date}}</td>
                 </tr>
             </tbody>
         </table>
      </div>
     </div>
 </div>
-              
