--- a/src/app/components/carrinho-compras/carrinho-compras.component.html
+++ b/src/app/components/carrinho-compras/carrinho-compras.component.html
@@ -93,9 +93,9 @@
                         <p class="mb-2">{{amount.toFixed(2)}}</p>
                       </div>
   
-                      <button type="button" class="btn btn-info btn-block btn-lg" (click)="save()">
+                      <button type="button" class="btn btn-info btn-block btn-lg" (click)="save()" href="carrinho">
                         <div class="d-flex justify-content-between">
-                          <span>Concluir compra <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
+                          <span routerLink="/carrinho">Concluir compra <i class="fas fa-long-arrow-alt-right ms-2"></i></span>
                         </div>
                       </button>
   
@@ -112,3 +112,32 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    <div class="container-footer">
+        <div class="row-footer">
+            <!-- footer col-->
+            <div class="footer-col">
+                <h4>Equipe</h4>
+                <ul>
+                    <li><a href="https://github.com/Francisco-Jean"> Francisco Jean </a></li>
+                    <li><a href="https://github.com/gcirineu18"> Guilherme Barbosa </a></li>
+                    <li><a href="https://github.com/levy-oliveira"> Levy Oliveira </a></li>
+                    <li><a href="https://github.com/biavieiras"> Beatriz Vieira </a></li>
+                    <li><a href="https://github.com/gustavoib"> João Gustavo </a></li>
+                </ul>
+            </div>
+            <!--end footer col-->
+            <!-- footer col-->
+            <div class="footer-col">
+                <h4>Tecnologias usadas no trabalho</h4>
+                <ul>
+                    <li><a>Java</a></li>
+                    <li><a>Spring Boot 3</a></li>
+                    <li><a>PostgreeSQL</a></li>
+                    <li><a>AngularJS</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
