--- a/src/app/private/vendas/listar-vendas-data/listar-vendas-data.component.html
+++ b/src/app/private/vendas/listar-vendas-data/listar-vendas-data.component.html
@@ -35,3 +35,31 @@
     </div>
 </div>
               
+<footer>
+    <div class="container-footer">
+        <div class="row-footer">
+            <!-- footer col-->
+            <div class="footer-col">
+                <h4>Equipe</h4>
+                <ul>
+                    <li><a href="https://github.com/Francisco-Jean"> Francisco Jean </a></li>
+                    <li><a href="https://github.com/gcirineu18"> Guilherme Barbosa </a></li>
+                    <li><a href="https://github.com/levy-oliveira"> Levy Oliveira </a></li>
+                    <li><a href="https://github.com/biavieiras"> Beatriz Vieira </a></li>
+                    <li><a href="https://github.com/gustavoib"> João Gustavo </a></li>
+                </ul>
+            </div>
+            <!--end footer col-->
+            <!-- footer col-->
+            <div class="footer-col">
+                <h4>Tecnologias usadas no trabalho</h4>
+                <ul>
+                    <li><a>Java</a></li>
+                    <li><a>Spring Boot 3</a></li>
+                    <li><a>PostgreeSQL</a></li>
+                    <li><a>AngularJS</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
