--- a/src/app/private/gerente/cadastrar-vendedor/cadastrar-vendedor.component.html
+++ b/src/app/private/gerente/cadastrar-vendedor/cadastrar-vendedor.component.html
@@ -1,10 +1,4 @@
-<nav class="navbar fixed-navbar">
-    <div class="container">
-      <div class="nav navbar-nav mx-auto" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="home"><img src="assets/icon.png" alt=""></a>
-      </div>
-    </div>
-  </nav>
+<app-layout></app-layout>
 
   <div class="container">
     <div id="tabela" class="mt-3 mb-3 p-3 card shadow"> 
@@ -87,4 +81,31 @@
       </div>
 
 
-  
+      <footer>
+        <div class="container-footer">
+            <div class="row-footer">
+                <!-- footer col-->
+                <div class="footer-col">
+                    <h4>Equipe</h4>
+                    <ul>
+                        <li><a href="https://github.com/Francisco-Jean"> Francisco Jean </a></li>
+                        <li><a href="https://github.com/gcirineu18"> Guilherme Barbosa </a></li>
+                        <li><a href="https://github.com/levy-oliveira"> Levy Oliveira </a></li>
+                        <li><a href="https://github.com/biavieiras"> Beatriz Vieira </a></li>
+                        <li><a href="https://github.com/gustavoib"> João Gustavo </a></li>
+                    </ul>
+                </div>
+                <!--end footer col-->
+                <!-- footer col-->
+                <div class="footer-col">
+                    <h4>Tecnologias usadas no trabalho</h4>
+                    <ul>
+                        <li><a>Java</a></li>
+                        <li><a>Spring Boot 3</a></li>
+                        <li><a>PostgreeSQL</a></li>
+                        <li><a>AngularJS</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
