--- a/src/app/private/vendas/lista-vendas-vendedor/lista-vendas-vendedor.component.html
+++ b/src/app/private/vendas/lista-vendas-vendedor/lista-vendas-vendedor.component.html
@@ -12,17 +12,15 @@
             <thead>
                 <tr>
                     <th>Produtos</th>
-                    <th>Vendedor</th>
                     <th>Valor</th>
                     <th>Data</th>
                 </tr>
                 
             </thead>
-            <tbody *ngFor="let sale of listSale">
+            <tbody *ngFor="let sale of Sale">
                 <tr>
                     <td>{{sale.id}}</td>
-                    <td>{{sale.idSeller}}</td>
-                    <td>{{sale.id}}</td>
+                    <td>{{sale.amount}}</td>
                     <td>{{sale.date}}</td>
                 </tr>
             </tbody>
@@ -30,3 +28,32 @@
      </div>
     </div>
 </div>
+
+<footer>
+    <div class="container-footer">
+        <div class="row-footer">
+            <!-- footer col-->
+            <div class="footer-col">
+                <h4>Equipe</h4>
+                <ul>
+                    <li><a href="https://github.com/Francisco-Jean"> Francisco Jean </a></li>
+                    <li><a href="https://github.com/gcirineu18"> Guilherme Barbosa </a></li>
+                    <li><a href="https://github.com/levy-oliveira"> Levy Oliveira </a></li>
+                    <li><a href="https://github.com/biavieiras"> Beatriz Vieira </a></li>
+                    <li><a href="https://github.com/gustavoib"> João Gustavo </a></li>
+                </ul>
+            </div>
+            <!--end footer col-->
+            <!-- footer col-->
+            <div class="footer-col">
+                <h4>Tecnologias usadas no trabalho</h4>
+                <ul>
+                    <li><a>Java</a></li>
+                    <li><a>Spring Boot 3</a></li>
+                    <li><a>PostgreeSQL</a></li>
+                    <li><a>AngularJS</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
