Adicionado listar produtos na busca de vendas.

--- a/src/app/private/vendas/lista-vendas-vendedor/lista-vendas-vendedor.component.scss
+++ b/src/app/private/vendas/lista-vendas-vendedor/lista-vendas-vendedor.component.scss
@@ -138,3 +138,13 @@
         width: 100%;
     }
   }
+
+
+
+.cor-par {
+    background-color: #ECECEC;
+}
+    
+.cor-impar {
+    background-color: #F7F7F7;
+}
