--- a/src/app/private/vendas/lista-vendas-vendedor/lista-vendas-vendedor.component.html
+++ b/src/app/private/vendas/lista-vendas-vendedor/lista-vendas-vendedor.component.html
@@ -11,17 +11,19 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Produtos</th>
-                    <th>Valor</th>
-                    <th>Data</th>
+                    <th>PRODUTOS</th>
+                    <th>VALOR</th>
+                    <th>DATA</th>
+                    <th>METODO DE PAGAMENTO</th>
                 </tr>
                 
             </thead>
             <tbody *ngFor="let sale of Sale">
                 <tr>
-                    <td>{{sale.id}}</td>
+                    <td><p *ngFor="let name of namesProducts!.get(sale.id!)">{{name}}</p></td>
                     <td>{{sale.amount}}</td>
                     <td>{{sale.date}}</td>
+                    <td>{{sale.paymentMethod}}</td>
                 </tr>
             </tbody>
         </table>
